[package]
name = "sockets"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tr3ysmith/sockets"
repository = "https://github.com/tr3ysmith/sockets"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
